apex auto app after signin, seventy two hours done

--- a/Online_Booking/immidateAfterSignUp.html
+++ b/Online_Booking/immidateAfterSignUp.html
@@ -132,20 +132,6 @@
         letter-spacing: 0.15px;
       }
 
-      /* .left-section {
-        width: calc(100% - 347px);
-      }
-      .right-section {
-        width: 347px;
-      } */
-      /* .mobileImg {
-        width: 347px;
-        height: 459px;
-      }
-      .visible-desktop {
-        display: block;
-      } */
-      /* Responsive Styling */
       .link {
         color: #75dbff;
       }
@@ -157,9 +143,7 @@
         .font-size-34 {
           font-size: 28px !important;
         }
-        .font-size-16 {
-          /* font-size: 14px !important; */
-        }
+
         .content-table {
           width: 100% !important;
         }
@@ -167,15 +151,11 @@
         .padding-48 {
           padding: 20px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 24px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 16px !important;
         }
-        .margin-top-24 {
-          margin-top: 24px !important;
-        }
+
         .button {
           padding: 10px 22px !important;
           display: table-cell !important;
@@ -210,21 +190,15 @@
           width: 165px !important;
           height: 100px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 24px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 12px !important;
         }
-        .margin-top-24 {
-          margin-top: 24px !important;
-        }
+
         .font-size-34 {
           font-size: 28px !important;
         }
-        .font-size-16 {
-          /* font-size: 12px !important; */
-        }
+
         .line-height-42 {
           line-height: 34px !important;
         }
@@ -233,7 +207,7 @@
         }
         .button {
           display: table-cell !important;
-          width: 85% !important;
+          width: 184px !important;
           text-align: center !important;
         }
         .card-title {
@@ -403,7 +377,7 @@
                             class="font-size-16 font-weight-400 line-height-24"
                           >
                             Stay in the loop with real-time notifications<br />
-                            for your appointments – from booking to pick<br />
+                            for your appointments – from booking to <br />pick
                             up.
                           </p>
                         </div>
