--- a/Apex_Auto_App/seventyTwoHourAfterSignIn.html
+++ b/Apex_Auto_App/seventyTwoHourAfterSignIn.html
@@ -61,7 +61,9 @@
       .font-size-16 {
         font-size: 16px;
       }
-
+      .font-size-18 {
+        font-size: 18px;
+      }
       .font-size-34 {
         font-size: 34px;
       }
@@ -136,9 +138,7 @@
         .font-size-34 {
           font-size: 25px !important;
         }
-        .font-size-16 {
-          font-size: 14px !important;
-        }
+
         .content-table {
           width: 100% !important;
         }
@@ -146,15 +146,11 @@
         .padding-48 {
           padding: 20px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 16px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 16px !important;
         }
-        .margin-top-24 {
-          margin-top: 16px !important;
-        }
+
         .button {
           padding: 10px 22px !important;
           display: table-cell !important;
@@ -166,6 +162,9 @@
       }
       /* Responsive Styling */
       @media only screen and (max-width: 400px) {
+        .hide-on-small {
+          display: none;
+        }
         .grid-col {
           width: 100% !important; /* Stacks the columns on smaller screens */
           display: inline;
@@ -176,34 +175,26 @@
           width: 165px !important;
           height: 100px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 12px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 12px !important;
         }
-        .margin-top-24 {
-          margin-top: 12px !important;
-        }
+
         .font-size-34 {
-          font-size: 22px !important;
+          font-size: 28px !important;
         }
-        .font-size-16 {
-          font-size: 12px !important;
-        }
+
         .line-height-42 {
-          line-height: 24px !important;
+          line-height: 34px !important;
         }
-        .line-height-24 {
-          line-height: 18px !important;
-        }
+
         .button {
           display: table-cell !important;
-          width: 85% !important;
+          width: 133px !important;
           text-align: center !important;
         }
         .card-title {
-          padding: 0 64px;
+          padding: 0 34px;
         }
       }
     </style>
@@ -211,8 +202,8 @@
   <body>
     <table
       align="center"
-      width="829px"
-      style="margin: 0 auto; width: 829px; background-color: #002394"
+      width="100%"
+      style="margin: 0 auto; max-width: 829px; background-color: #002394"
       role="presentation"
       cellspacing="0"
       cellpadding="0"
@@ -387,9 +378,8 @@
                 <p
                   class="font-size-16 font-weight-400 line-height-24 margin-bottom-24 whiteColor"
                 >
-                  Say goodbye to being put on hold on the phone. Book your
-                  appointment in seconds with the Apex Auto app and enjoy a
-                  superior car care experience.
+                  Take the hassle out of car service today. Your next
+                  appointment is just a few taps away!
                 </p>
 
                 <!-- Button Section -->
@@ -405,7 +395,7 @@
                 <p
                   class="font-size-16 margin-top-24 font-weight-400 line-height-24 whiteColor"
                 >
-                  Kind Regards, <br />
+                  Best regards,<br />
                   The Apex Auto Team
                 </p>
               </td>
