added the cfreated shop email.

--- a/Online_Booking/twoHourAfterSignUp.html
+++ b/Online_Booking/twoHourAfterSignUp.html
@@ -67,7 +67,9 @@
       .font-size-16 {
         font-size: 16px;
       }
-
+      .font-size-18 {
+        font-size: 18px;
+      }
       .font-size-34 {
         font-size: 34px;
       }
@@ -128,28 +130,22 @@
           width: 200px !important;
           height: 120px !important;
         }
+        .padding-48 {
+          padding: 20px !important;
+        }
+
         .font-size-34 {
-          font-size: 25px !important;
+          font-size: 28px !important;
         }
-        .font-size-16 {
-          font-size: 14px !important;
-        }
+
         .content-table {
           width: 100% !important;
         }
 
-        .padding-48 {
-          padding: 20px !important;
-        }
-        .margin-bottom-24 {
-          margin-bottom: 16px !important;
-        }
         .padding-bottom-24 {
           padding-bottom: 16px !important;
         }
-        .margin-top-24 {
-          margin-top: 16px !important;
-        }
+
         .button {
           display: inline !important;
           width: 100% !important;
@@ -163,51 +159,25 @@
           width: 165px !important;
           height: 100px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 12px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 12px !important;
         }
-        .margin-top-24 {
-          margin-top: 12px !important;
-        }
+
         .font-size-34 {
-          font-size: 22px !important;
+          font-size: 28px !important;
         }
-        .font-size-16 {
-          font-size: 12px !important;
-        }
+
         .line-height-42 {
-          line-height: 24px !important;
+          line-height: 34px !important;
         }
-        .line-height-24 {
-          line-height: 18px !important;
-        }
+
         .button {
           display: inline-block !important;
           width: 85% !important;
           margin-right: 0 !important;
           margin-bottom: 10px !important;
           text-align: center !important;
-        }
-      }
-      @media (prefers-color-scheme: dark) {
-        .card {
-          background-color: #f1f1f1 !important;
-        }
-
-        .link {
-          color: #008 !important;
-        }
-      }
-
-      @media (prefers-color-scheme: light) {
-        .card {
-          background-color: #f1f1f1 !important;
-        }
-        .link {
-          color: #008 !important;
         }
       }
     </style>
@@ -281,8 +251,8 @@
                   >
                     To get started, you can explore top rated repair shops and
                     book your appointment here:<br />
-                    <span class="linkUnderline"
-                      >Find a Repair Shop and Book Now</span
+                    <a href="#" class="linkUnderline"
+                      >Find a Repair Shop and Book Now</a
                     >
                   </p>
 
@@ -290,7 +260,7 @@
                     class="font-size-16 font-weight-400 line-height-24 blackColor"
                   >
                     Kind Regards, <br />
-                    Apex Mechanic Team
+                    The Apex Auto Team
                   </p>
                 </div>
               </td>
