--- a/Customer_Signup_from_online_booking_but_no_appointment/needHelp.html
+++ b/Customer_Signup_from_online_booking_but_no_appointment/needHelp.html
@@ -67,7 +67,9 @@
       .font-size-16 {
         font-size: 16px;
       }
-
+      .font-size-18 {
+        font-size: 18px;
+      }
       .font-size-34 {
         font-size: 34px;
       }
@@ -128,28 +130,22 @@
           width: 200px !important;
           height: 120px !important;
         }
+        .padding-48 {
+          padding: 20px !important;
+        }
+
         .font-size-34 {
-          font-size: 25px !important;
+          font-size: 28px !important;
         }
-        .font-size-16 {
-          font-size: 14px !important;
-        }
+
         .content-table {
           width: 100% !important;
         }
 
-        .padding-48 {
-          padding: 20px !important;
-        }
-        .margin-bottom-24 {
-          margin-bottom: 16px !important;
-        }
         .padding-bottom-24 {
           padding-bottom: 16px !important;
         }
-        .margin-top-24 {
-          margin-top: 16px !important;
-        }
+
         .button {
           display: inline !important;
           width: 100% !important;
@@ -163,27 +159,19 @@
           width: 165px !important;
           height: 100px !important;
         }
-        .margin-bottom-24 {
-          margin-bottom: 12px !important;
-        }
+
         .padding-bottom-24 {
           padding-bottom: 12px !important;
         }
-        .margin-top-24 {
-          margin-top: 12px !important;
-        }
+
         .font-size-34 {
-          font-size: 22px !important;
+          font-size: 28px !important;
         }
-        .font-size-16 {
-          font-size: 12px !important;
-        }
+
         .line-height-42 {
-          line-height: 24px !important;
+          line-height: 34px !important;
         }
-        .line-height-24 {
-          line-height: 18px !important;
-        }
+
         .button {
           display: inline-block !important;
           width: 85% !important;
@@ -255,7 +243,7 @@
                     If you’re having trouble finding a repair shop, selecting a
                     service, or need guidance on how to book, we’re here to
                     help! Simply reply to this email, and we’ll walk you through
-                    the process
+                    the process.
                   </p>
 
                   <p
